# lab5

./: CMakeLists.txt  Database.cpp  Database.h  Datalogprogram.cpp  Datalogprogram.h  Graph.cpp  Graph.h  Interpreter1.cpp  Interpreter1.h  Node.cpp  Node.h  Param.cpp  Param.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  Scanner1.cpp  Scanner1.h  Scheme.cpp  Scheme.h  Token1.cpp  Token1.h  Tuple.cpp  Tuple.h  custom.txt  in88.txt  lab4  lab5  main.cpp
lab4.dSYM/Contents/Resources/DWARF/: lab4
lab5.dSYM/Contents/Resources/DWARF/: lab5
